     delete m_pBuffer.
 Released     Jan 15, 2007

3.1-004
   - Defect 288 the eval apply $gate [list $spectra] did not work as believed.
     iterate over the list instead.
3.1-004
   - Enh 232 : If treeparameter -set is invoked fire traces on that parameter so
	any GUI elements associated with it are updated.
   - BZ292 - Synchronize gpVersion with config.h's VERSION symbol.

   - BZ 293 - Uniquify tk appname   and remove NSCL copyright notice from the top of
       tkcon.tcl as it's really Jeff Hobb's work under "bourbonware".
   - BZ 284 - Ensure SpecTcldoes not crash if the VERSION file is not readable.

Released April 26, 2007

3.1-005
  May  3, 2007 - backport the 3.2 mod to drawing text in Xamine so something
                 is always drawn.
               - Fold in the jumbo buffer stuff for real.
  May 14, 2007 - BZ 297 - Deal with pathalogical case of a single channel on
                 an axis.
  May 16, 2007 - Correct error in -state enabled -> -state normal in 
	TreeParam/SpectrumGenerator.tcl
  May 16, 2007 - Correct error in TreeParam/SpectrumGenerator.tcl 
                 Duplicate Spectrum was not correctly retrieving the parameters
                 of the spectrum being duplicated.
  May 18, 2007 -  Fix CNSCLJumboBuffer::size32() member, was not correctly 
                  picking up the buffer revision level.
  May 28, 2007 - Fix conversion errors in channel -> screens whas moving
                 the dispay of summing errors around.
  May 30, 2007 - Fix up gate locations to match the 3.2 branch.
  June 6, 2007 - Ensure that Xamine superposition prompt messages will display
                 by making them children of the parent of the dialog rather
                 than children of the dialog (which gets hidden when
                 Xamine_error_msg is called).
  June 11,2007   Get a clean development build on ubuntu edgy eft (e.g. from cvs co).
  July 2, 2007   Fix error in 2d integration was returning stdevs not
                 FWHMs.